[wheel]
universal = 1

[metadata]
description-file = README.md

[flake8]
max-line-length=100
exclude=tests/*

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --cov=splitio --cov-report xml
python_classes=*Tests

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[upload_sphinx]
upload-dir = doc/build/html
