[wheel]
universal = 1

[metadata]
name = splitio_client
description = This SDK is designed to work with Split, the platform for controlled rollouts, which serves features to your users via a Split feature flag to manage your complete customer experience.
long_description = file: README.md
long_description_content_type = text/markdown

[flake8]
max-line-length=100
exclude=tests/*

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --cov=splitio --cov-report xml
python_classes=*Tests

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[upload_sphinx]
upload-dir = doc/build/html
